# arxml-parse

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: autosar_00042.rst  autosar_00043.rst  autosar_00044.rst  autosar_00045.rst  autosar_00046.rst  autosar_00047.rst  autosar_00048.rst  autosar_00049.rst  autosar_00050.rst  autosar_00051.rst  autosar_00052.rst  conf.py  index.rst  io.rst
src/arxml_parse/: __init__.py  io.py
src/arxml_parse/autosar_00042/: __init__.py
src/arxml_parse/autosar_00043/: __init__.py
src/arxml_parse/autosar_00044/: __init__.py
src/arxml_parse/autosar_00045/: __init__.py
src/arxml_parse/autosar_00046/: __init__.py
src/arxml_parse/autosar_00047/: __init__.py
src/arxml_parse/autosar_00048/: __init__.py
src/arxml_parse/autosar_00049/: __init__.py
src/arxml_parse/autosar_00050/: __init__.py
src/arxml_parse/autosar_00051/: __init__.py
src/arxml_parse/autosar_00052/: __init__.py
test/: test_io.py  test_parse.py  util.py
xsd2py/: .xsdata.xml  codegen.py
