[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arxml-parse"
version = "0.1.0"
description = "ARXML parser"
readme = "README.md"
authors = [
    { name = "Artur Drogunow", email = "Artur.Drogunow@zf.com" }
]
requires-python = ">=3.11"
dependencies = [
    "xsdata>=24.11",
]

[dependency-groups]
dev = [
    "mypy==1.13.*",
    "ruff==0.8.0",
    "xsdata[cli]>=24.11",
]

[tool.ruff]
line-length = 100
lint.extend-select = [
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "E",     # pycodestyle
    "EM",    # flake8-errmsg
    "F",     # pyflakes
    "G",     # flake8-logging-format
    "I",     # isort
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PL",    # pylint
    "RSE",   # flake8-raise
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "UP",    # pyupgrade
    "W",     # pycodestyle
]
lint.ignore = [
    "E501",  # line-too-long
    "E741",  # ambiguous-variable-name
]
