[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "arxml-parse"
description = "ARXML parser"
readme = "README.md"
authors = [
    { name = "Artur Drogunow", email = "Artur.Drogunow@zf.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [ "xsdata>=24.11" ]
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "tox>=4.23.2",
    "xsdata[cli]>=24.11",
    {include-group = "lint"},
]
doc = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
]
test = [
    "pytest==8.3.*",
]
lint = [
    "ruff==0.8.0",
    "mypy==1.13.*",
]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.ruff]
line-length = 100
lint.extend-select = [
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "E",     # pycodestyle
    "EM",    # flake8-errmsg
    "F",     # pyflakes
    "G",     # flake8-logging-format
    "I",     # isort
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PL",    # pylint
    "RSE",   # flake8-raise
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "UP",    # pyupgrade
    "W",     # pycodestyle
]
lint.ignore = [
    "E501",  # line-too-long
    "E741",  # ambiguous-variable-name
]
